fixing the spacing for the header above the video

--- a/src/index.css
+++ b/src/index.css
@@ -415,10 +415,6 @@ code {
   width: 560px;
 }
 
-.videoSection > h2 {
-  text-align: center;
-}
-
 .mainLinkSection > h2 {
   text-align: center;
   color: #72dbd6;
